# FlamEdgeViewer

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.c  native-lib.cpp
app/src/main/java/: EdgeDetectionRenderer.java
app/src/main/java/com/example/flamedgeviewer/: Camera2Preview.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
res/values/: colors.xml
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: main.ts  styles.css
web/src/components/: ImageViewer.ts  Overlay.ts
web/src/ui/: app.ts
